Change spacing to grid gap and fix width for side cards

--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ li:nth-child(6) {
 .main-content {
     grid-area: main-content;
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 3fr 300px;
     grid-template-rows: min-content 1fr;
     grid-template-areas: 
         "projects announcements"
@@ -282,6 +282,7 @@ li:nth-child(6) {
     grid-template-areas: 
         "picture username"
         "picture user-project";
+    grid-column-gap: 12px;
     align-items: center;
     justify-items: left;
     margin-bottom: 15px;
@@ -289,7 +290,6 @@ li:nth-child(6) {
 
 .trend-item img {
     grid-area: picture;
-    margin-right: 12px;
 }
 
 .trend-item .username {
